# ksize

./: README.md  kafka_install.py  pyproject.toml  requirements.txt  setup.py
ksize/: cli.py
src/ksize/: cli.py  kafka_install.py  kafka_topic_size.py
tests/: test_kafka_topic_size.py
