[tool.poetry]
name = "ksize"
version = "0.1.0"
description = ""
authors = ["drunkensway <alexanderrochette@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.2.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
